--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 #dropdownLang {
-  background-color: "green";
+  /*Color*/
+  background-color: green;
+  border: 4px solid yellowgreen;
+  border-radius: 5px;
+  /*Position*/
   position: absolute;
   right: 0px;
-  border-color: "greenYellow";
 }
 
 /*# sourceMappingURL=styles.css.map */
