--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 main {
   margin-bottom: 100px;
   padding-top: 40px;
+  padding-left: 120px;
 }
 
 #guitar {
   float: left;
+  width: 100px;
+  height: auto;
 }
 
 #dropdownLang {
@@ -15,6 +18,25 @@ main {
   /*Position*/
   position: absolute;
   right: 0px;
+}
+
+.dropdownContent {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownContent {
+  display: none;
+}
+
+#dropDownBtn hover .dropdownContent {
+  display: inline-block;
+}
+
+footer {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 90%;
+  padding-left: 120px;
 }
 
 /*# sourceMappingURL=styles.css.map */
